--- a/app/src/main/res/layout/recycler_item_blog.xml
+++ b/app/src/main/res/layout/recycler_item_blog.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_vertical_margin">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="@dimen/vertical_margin">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/blogTitleTextView"
@@ -12,7 +13,8 @@
         android:background="@drawable/rounded_filled_primary_background"
         android:backgroundTint="@color/primary_dark"
         android:gravity="center"
-        android:padding="@dimen/activity_vertical_margin"
+        android:padding="@dimen/vertical_margin"
+        tools:text="Row Text"
         android:textColor="@color/primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
