--- a/app/src/main/res/layout/recycler_item_blog.xml
+++ b/app/src/main/res/layout/recycler_item_blog.xml
@@ -4,18 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="@dimen/vertical_margin">
+    android:layout_margin="@dimen/padding">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/blogTitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_filled_primary_background"
-        android:backgroundTint="@color/primary_dark"
+        android:backgroundTint="@color/green"
         android:gravity="center"
         android:padding="@dimen/vertical_margin"
         tools:text="Row Text"
-        android:textColor="@color/primary"
+        android:textColor="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
