--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#007fc4</color>
-    <color name="primary_dark">#9ed07c</color>
-    <color name="accent">#ffdd55</color>
+    <color name="blue">#007fc4</color>
+    <color name="green">#9ed07c</color>
 </resources>
